updated logo svg to png 191px*191px

--- a/book.html
+++ b/book.html
@@ -6,8 +6,7 @@
     <title>Laundrii | Book Now</title>
     <meta name="description" content="Book your laundry service with Laundrii. Send your details and questions and we will reply quickly.">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-    <link rel="icon" type="image/svg+xml" href="images/laundrii-logo.svg" sizes="any">
-    <link rel="apple-touch-icon" href="images/laundrii-logo.svg">
+    <link rel="apple-touch-icon" href="images/laundrii-logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
