--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-    <link rel="icon" type="image/svg+xml" href="images/laundrii-logo.svg" sizes="any">
-    <link rel="apple-touch-icon" href="images/laundrii-logo.svg">
+    <link rel="apple-touch-icon" href="images/laundrii-logo.png">
     
     <!-- Additional SEO Meta Tags -->
     <meta name="keywords" content="laundry, wash and fold, dry cleaning, laundry service, Ottawa laundry, Gatineau laundry, pickup and delivery, professional laundry">
@@ -54,7 +53,7 @@
         "@type": "Organization",
         "name": "Laundrii",
         "url": "https://aitr0001.github.io/laundrii-work/",
-        "logo": "https://aitr0001.github.io/laundrii-work/images/laundrii-logo.svg",
+        "logo": "https://aitr0001.github.io/laundrii-work/images/laundrii-logo.png",
         "contactPoint": {
             "@type": "ContactPoint",
             "telephone": "+1-613-238-8659",
